# ChangeLog for app-shells/zsh
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-shells/zsh/ChangeLog,v 1.143 2009/03/22 19:37:28 armin76 Exp $

  22 Mar 2009; Raúl Porcel <armin76@gentoo.org> zsh-4.3.9.ebuild:
  arm/ia64/s390/sh/sparc stable wrt #261488

  22 Mar 2009; Markus Meier <maekke@gentoo.org> zsh-4.3.9.ebuild:
  x86 stable, bug #261488

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> zsh-4.3.9.ebuild:
  Stable for HPPA (bug #261488).

  19 Mar 2009; Brent Baude <ranger@gentoo.org> zsh-4.3.9.ebuild:
  stable ppc, bug 261488

  15 Mar 2009; Tobias Klausmann <klausman@gentoo.org> zsh-4.3.9.ebuild:
  Stable on alpha, bug #261488

  15 Mar 2009; Dawid Węgliński <cla@gentoo.org> zsh-4.3.9.ebuild:
  Stable on amd64 (bug #261488)

  13 Mar 2009; Torsten Veller <tove@gentoo.org> zsh-4.3.9.ebuild:
  Let tests die

  21 Jan 2009; Torsten Veller <tove@gentoo.org>
  +files/zsh-4.3.4-mkmakemod.patch, zsh-4.3.4-r1.ebuild:
  Fix for latest autoconf (#254348)

*zsh-4.3.9 (04 Jan 2009)

  04 Jan 2009; Torsten Veller <tove@gentoo.org>
  +files/prompt_gentoo_setup-1, +zsh-4.3.9.ebuild:
  Version bump (#246544)

  29 Jun 2008; Torsten Veller <tove@gentoo.org> zsh-4.3.4-r1.ebuild:
  Add missing die: || "..." -> || die "..."

  23 May 2008; Torsten Veller <tove@gentoo.org> files/zprofile:
  Don't extract EDITOR, PAGER from rc.conf (#222793)

*zsh-4.3.6 (04 Apr 2008)

  04 Apr 2008; Torsten Veller <tove@gentoo.org> +zsh-4.3.6.ebuild:
  Version bump. Fixes zsh-lovers uri and bug #209146.

  26 Mar 2008; Torsten Veller <tove@gentoo.org> -files/zshenv,
  -zsh-4.3.2-r2.ebuild, -zsh-4.3.2-r3.ebuild, -zsh-4.3.4.ebuild:
  Cleaning

*zsh-4.3.5 (02 Feb 2008)

  02 Feb 2008; Torsten Veller <tove@gentoo.org> +zsh-4.3.5.ebuild:
  Version bump. Removed pkg_preinst and parts of pkg_postinst.
  Fixed cap useflag. Tests and static linking need more testing.

  08 Jan 2008; Jeroen Roovers <jer@gentoo.org> zsh-4.3.4-r1.ebuild: