@@ -18,6 +18,6 @@ DIST zsh-lovers_0.5.orig.tar.gz 499014 RMD160 505261d9e28554c838864421ec81b6665e
 EBUILD zsh-4.3.4-r1.ebuild 5291 RMD160 6b0ef9027686957e5519a5a35291a9ed9cb0a5ad SHA1 40abf2bd3fe7330475455a438c06b37e0ecd4f71 SHA256 887b6cb7dd60b851dc43346b39322335a536493b7c7f09c96398c1a8fcf320e2
 EBUILD zsh-4.3.5.ebuild 4393 RMD160 f9cdd1bac53dbae329413a62d4bdaed0b091be3a SHA1 611d138e11eab84aed04668df24d71c479eabc98 SHA256 d1358d4f61d114bcc09e292e7e5344cd73bf63889027c4a3a559ccbbedc6567e
 EBUILD zsh-4.3.6.ebuild 4853 RMD160 39efb8a92d358fcd3a2c019910252bceae68ef6e SHA1 236f3015eaf68c44597448abbd4db9dec55d3928 SHA256 b060db8386e61edae048a87b7c8f8003d9f7134e57761b9466bc55be6ff311dc
-EBUILD zsh-4.3.9.ebuild 5268 RMD160 0392eb289de73c8a3a85f42be9f92815324cc5c8 SHA1 2cf104089b69695e99b8a0b13581286e44cb3f7d SHA256 12b482731793fcac467d7c6fb579ab63d7ec99020fd34e4cc5bfe853168d8531
-MISC ChangeLog 21549 RMD160 33447e4dc1d71e1a84a0f348808190648b37e5f0 SHA1 15f4c51481c998c43aa945abce4d0782354128a9 SHA256 da7f816749f8d6e8691dcda51b971e6c3c2806613893bb379fe02c27c59ccdef
+EBUILD zsh-4.3.9.ebuild 5374 RMD160 8fd71a858d33e2d74061e9dcc012edbfec21913c SHA1 fdd2ad1d7a86130b35c159a9223cccc84aff1aee SHA256 ef023c7a94a7a747f797e81bdc0e581c4e900303bb976305d800742de9336e99
+MISC ChangeLog 21684 RMD160 da89f7b45dc624acb7855b2cf21ddd6663498df5 SHA1 c8f1ad13552d13ba8dc5eceb480ba3819be53f75 SHA256 f1fdd9219019cfc48b3e5e668a94e9bba7c4be1a3788946e74e69bad9f55d0ea
 MISC metadata.xml 553 RMD160 b4d3d1ca445d0c50f0372fb8af1e9fa2e4c303fb SHA1 8652a4d38b0858eff280576ca143ddc9b5db83c1 SHA256 e4bdebdc75f06d8cc998456bd2a1ec7300b6a08ca5fb28590841ad7071366cf4
